# eclipta

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  eclipta.yaml  install.sh
.github/workflows/: rust.yml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: agents.rs  auth.rs  mod.rs
backend/src/services/: jwt.rs  mod.rs
cli/: .gitignore  Cargo.toml
cli/src/: main.rs
cli/src/commands/: agent_logs.rs  agents_inspect.rs  config.rs  kill_agent.rs  live.rs  load.rs  mod.rs  monitor.rs  status.rs  unload.rs  version.rs  welcome.rs
cli/src/utils/: logger.rs
ebpf-demo/: .gitignore  Cargo.toml  build-ebpf.sh  xdp_pass_kern.c
ebpf-demo/.cargo/: config.toml
ebpf-demo/ebpf/: Cargo.toml
ebpf-demo/ebpf/src/: lib.rs
ebpf-demo/user/: Cargo.toml
ebpf-demo/user/src/: main.rs
ebpf-demo/xdp_drop/: Cargo.toml
ebpf-demo/xdp_drop/src/: lib.rs  main.rs
eclipta-agents/: Cargo.toml
eclipta-agents/src/: main.rs
eclipta-cli/: Cargo.toml
eclipta-cli/src/: main.rs
eclipta-cli/src/commands/: agents.rs  check_db.rs  inspect.rs  load.rs  mod.rs  ping_all.rs  restart_agent.rs  run.rs  sync_agents.rs  unload.rs  update_agent.rs  upload.rs  watch_cpu.rs
eclipta-cli/src/commands/config/: daemon.rs
eclipta-cli/src/commands/ebpf/: inspect.rs  list.rs  load.rs  mod.rs  remove.rs  unload.rs  upload.rs
eclipta-cli/src/commands/network/: alerts.rs  mod.rs
eclipta-cli/src/commands/store/: check_db.rs  migrate.rs  mod.rs
eclipta-cli/src/commands/system/: logs.rs  mod.rs  monitor.rs  status.rs
eclipta-cli/src/db/: migrations.rs  mod.rs  programs.rs
eclipta-cli/src/utils/: db.rs  logger.rs  mod.rs  paths.rs  state.rs
eclipta-ebpf-demo/: Cargo.toml
eclipta-ebpf-demo/ebpf/: Cargo.toml
eclipta-ebpf-demo/ebpf/src/: main.rs
eclipta-ebpf-demo/user/: Cargo.toml
eclipta-ebpf-demo/user/src/: main.rs
examples/ebpf/: Makefile  simple_trace.c  simple_xdp.c
frontend/: vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/auth/: Login.tsx
frontend/src/components/: Sidebar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Agents.tsx  dashboard.tsx
src/: main.rs
tests/: ebpf_loader  loader.c
