[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
hyper = "1" 
hyper-util = { version = "0.1", features = ["tokio"] } 
tower = { version = "0.4", features = ["make"] }
tower-service = "0.3"