[package]
name = "eclipta"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", tag = "aya-v0.13.1" }
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
tracing-subscriber = "0.3"
figlet-rs = "0.1"
console = "0.15"
nix = { version = "0.30", features = ["user", "signal", "process"] }
anyhow = "1"
log = "0.4"
tokio = { version = "1.38", features = ["rt-multi-thread", "time", "signal", "fs", "io-util"] }
byteorder = "1"
bytes = "1.10.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.30"
tui = "0.19"
crossterm = "0.27"
chrono = "0.4.41"
hostname = "0.4.1"
humantime = "2.1"
