[package]
name = "eclipta-cli"
version = "1.0.0"
edition = "2021"

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", tag = "aya-v0.13.1" }
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
tracing-subscriber = "0.3"
figlet-rs = "0.1"
console = "0.15"
nix = { version = "0.30", features = ["user", "signal", "process", "resource"] }
anyhow = "1"
log = "0.4"
tokio = { version = "1.38", features = ["rt-multi-thread", "time", "signal", "fs", "io-util", "macros" ] }
byteorder = "1"
bytes = "1.10.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.30"
tui = "0.19"
crossterm = "0.27"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4.1"
humantime = "2.1"
dirs = "5.0"
# sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "macros"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
dotenvy = "0.15"
uuid = { version = "1.8", features = ["v4"] }
colored = "2.1"
prettytable = "0.10.0"